<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.mysebu.ebebe.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_naissance"
        android:name="com.mysebu.ebebe.ui.naissance.NaissanceFragment"
        android:label="@string/menu_naissance"
        tools:layout="@layout/fragment_naissance" />

    <fragment
        android:id="@+id/nav_listdeclaration"
        android:name="com.mysebu.ebebe.ui.listdeclaration.ListdeclarationFragment"
        android:label="@string/menu_listdeclration"
        tools:layout="@layout/fragment_listdeclaration" />

    <fragment
        android:id="@+id/nav_tools"
        android:name="com.mysebu.ebebe.ui.tools.ToolsFragment"
        android:label="@string/menu_tools"
        tools:layout="@layout/fragment_tools" />

    <fragment
        android:id="@+id/nav_share"
        android:name="com.mysebu.ebebe.ui.share.ShareFragment"
        android:label="@string/menu_share"
        tools:layout="@layout/fragment_share" />

    <fragment
        android:id="@+id/nav_send"
        android:name="com.mysebu.ebebe.ui.send.SendFragment"
        android:label="@string/menu_send"
        tools:layout="@layout/fragment_send" />
</navigation>